--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icon-cloud": "^4.1.4",
     "react-router-dom": "^6.27.0",
     "styled-components": "^6.1.13",
+    "sweetalert2": "^11.14.5",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.170.0",
